// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampoTexto se despliega correctamente campo de texto calendario 1`] = `
<div
  className="sc-hmdomO laSMdn"
  id="CampoDeTextoEnvolvedor"
>
  <div
    className="sc-kpDqfm sc-bXCLTC bTCkFB gfytQ"
    id="CampoDeTextoEnvolvedor-etiqueta"
  >
    etiqueta campo calendario
  </div>
  <div
    className="sc-kpDqfm sc-ikkxIA bTCkFB fHCYll"
    id="CampoDeTextoEnvolvedor-contenedorCampoDeTexto"
  >
    <div
      className="SingleDatePicker SingleDatePicker_1"
    >
      <div
        className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
      >
        <button
          className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V8h16v13z"
            />
          </svg>
        </button>
        <div
          className="DateInput DateInput_1"
        >
          <input
            aria-describedby="DateInput__screen-reader-message-CampoDeTextoEnvolvedor-campoDeTexto"
            aria-label="Date"
            autoComplete="off"
            className="DateInput_input DateInput_input_1"
            disabled={false}
            id="CampoDeTextoEnvolvedor-campoDeTexto"
            name="CampoDeTextoEnvolvedor-campoDeTexto"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Date"
            readOnly={false}
            required={false}
            type="text"
            value="01/enero/2021"
          />
          <p
            className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
            id="DateInput__screen-reader-message-CampoDeTextoEnvolvedor-campoDeTexto"
          >
            Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CampoTexto se despliega correctamente campo de texto de area 1`] = `
<div
  className="sc-hmdomO cciLkP"
  id="CampoDeTextoEnvolvedor"
>
  <div
    className="sc-kpDqfm sc-bXCLTC bTCkFB gfytQ"
    id="CampoDeTextoEnvolvedor-etiqueta"
  >
    etiqueta campo serie
  </div>
  <div
    className="sc-kpDqfm sc-ikkxIA bTCkFB fHCYll"
    id="CampoDeTextoEnvolvedor-contenedorCampoDeTexto"
  >
    <textarea
      autoFocus={false}
      className="sc-feUZmu bhkhxv"
      data-indice={null}
      disabled={false}
      id="CampoDeTextoEnvolvedor-campoDeTexto"
      maxLength=""
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      readOnly={false}
      rows={2}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`CampoTexto se despliega correctamente campo de texto regular 1`] = `
<div
  className="sc-hmdomO laSMdn"
  id="CampoDeTextoEnvolvedor"
>
  <div
    className="sc-kpDqfm sc-bXCLTC bTCkFB gfytQ"
    id="CampoDeTextoEnvolvedor-etiqueta"
  >
    etiqueta campo regular
  </div>
  <div
    className="sc-kpDqfm sc-ikkxIA bTCkFB fHCYll"
    id="CampoDeTextoEnvolvedor-contenedorCampoDeTexto"
  >
    <input
      autoFocus={false}
      className="sc-dAbbOL jNppfM"
      data-indice={null}
      disabled={false}
      id="CampoDeTextoEnvolvedor-campoDeTexto"
      maxLength=""
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      readOnly={false}
      rows={null}
      type="text"
      value=""
    />
    <div
      className="sc-fUnMCh ehwKsJ"
      onClick={null}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <circle
          cx="12"
          cy="12"
          r="3.2"
        />
        <path
          d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`CampoTexto se despliega correctamente campo de texto serie 1`] = `
<div
  className="sc-hmdomO laSMdn"
  id="CampoDeTextoEnvolvedor"
>
  <div
    className="sc-kpDqfm sc-bXCLTC bTCkFB gfytQ"
    id="CampoDeTextoEnvolvedor-etiqueta"
  >
    etiqueta campo serie
  </div>
  <div
    className="sc-jsJBEP cBiAr"
    id="CampoDeTextoEnvolvedor-contenedorCampoDeTexto"
  >
    <input
      autoFocus={false}
      className="sc-dAbbOL jNppfM  campo-texto-serie"
      data-indice={0}
      disabled={false}
      id="CampoDeTextoEnvolvedor-campoDeTexto-0"
      maxLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      readOnly={false}
      rows={null}
      type="number"
      value=""
    />
    <input
      autoFocus={false}
      className="sc-dAbbOL jNppfM  campo-texto-serie"
      data-indice={1}
      disabled={false}
      id="CampoDeTextoEnvolvedor-campoDeTexto-1"
      maxLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      readOnly={false}
      rows={null}
      type="number"
      value=""
    />
    <input
      autoFocus={false}
      className="sc-dAbbOL jNppfM  campo-texto-serie"
      data-indice={2}
      disabled={false}
      id="CampoDeTextoEnvolvedor-campoDeTexto-2"
      maxLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      readOnly={false}
      rows={null}
      type="number"
      value=""
    />
    <input
      autoFocus={false}
      className="sc-dAbbOL jNppfM  campo-texto-serie"
      data-indice={3}
      disabled={false}
      id="CampoDeTextoEnvolvedor-campoDeTexto-3"
      maxLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      readOnly={false}
      rows={null}
      type="number"
      value=""
    />
  </div>
</div>
`;
